Added update profile endpoint
