# src/controllers/AccountController.ts
@@ -13,6 +13,7 @@ import { ImgUpload } from '../middlewares/Upload';
 ////////////////////////////////////////
 import LogInDto from './../dto/LoginDTO';
 import RegisterDTO from './../dto/RegisterDTO';
+import UpdateClientDTO from './../dto/UpdateClientDTO';
 ////////////////////////////////////////
 import TokenManager from '../modules/TokenManager';
 import Response from './../modules/Response';
@@ -38,6 +39,23 @@ class AccountController implements IController {
         this.router.post(`${this.path}/Register`, validationMiddleware(RegisterDTO), this.register);
         ///////////////////////////////////////////////////////////////////////////////////
         this.router.get(`${this.path}/getProfileData`, authMiddleware, this.getProfileData)
+        this.router.patch(`${this.path}`, ImgUpload.single('profilePicture'), authMiddleware, validationMiddleware(UpdateClientDTO), this.updateAccount);
+
+    }
+
+    private updateAccount = async (request: IRequestWithUser, response: express.Response, next: express.NextFunction) => {
+        let newData: UpdateClientDTO = request.body;
+        let newObj = {};
+        Object.keys(newData).forEach((prop) => {
+            if (newData[prop]) { newObj[prop] = newData[prop]; }
+        });
+        try {
+            let newUser = await clientModel.findByIdAndUpdate(request.user._id, { $set: newObj });
+            response.status(200).send(new Response('Updated Successfuly!').getData());
+        }
+        catch {
+            next(new SomethingWentWrongException());
+        }
     }
     private validateToken = async (quest: IRequestWithUser, response: express.Response, next: express.NextFunction) => {
         response.status(200).send(new Response(undefined, { result: true }).getData());
